# speedtype-text-processor

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: main.rs
src/directory_walker/: walker.rs
